Fix problem of clipped science tag in log message.  The science tag is the only tag that currently sets a custom background position.
To reproduce, have a card like Search For Life and draw a card with science tag (as the top card) after activating it.

--- a/src/styles/log.less
+++ b/src/styles/log.less
@@ -91,6 +91,7 @@
 
 .log-tag {
   display: inline-block;
+  background-position: 0; // Override any tag-specific background position.
   background-size: 18px;
   width: 18px;
   height: 18px;
